--- a/SabihaninBlogProjesi/DAL/DAL.csproj
+++ b/SabihaninBlogProjesi/DAL/DAL.csproj
@@ -85,6 +85,22 @@
     <Compile Include="Migrations\201801071812403_yorumtablosudegişiklik3.Designer.cs">
       <DependentUpon>201801071812403_yorumtablosudegişiklik3.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801080918576_kucukdgsklk.cs" />
+    <Compile Include="Migrations\201801080918576_kucukdgsklk.Designer.cs">
+      <DependentUpon>201801080918576_kucukdgsklk.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801081004537_kucukdgsklk2.cs" />
+    <Compile Include="Migrations\201801081004537_kucukdgsklk2.Designer.cs">
+      <DependentUpon>201801081004537_kucukdgsklk2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801081007125_kucukdgsklk3geriislem.cs" />
+    <Compile Include="Migrations\201801081007125_kucukdgsklk3geriislem.Designer.cs">
+      <DependentUpon>201801081007125_kucukdgsklk3geriislem.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801081149063_kucukdgsklk3geriislem3.cs" />
+    <Compile Include="Migrations\201801081149063_kucukdgsklk3geriislem3.Designer.cs">
+      <DependentUpon>201801081149063_kucukdgsklk3geriislem3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MyContext.cs" />
@@ -120,6 +136,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201801071812403_yorumtablosudegişiklik3.resx">
       <DependentUpon>201801071812403_yorumtablosudegişiklik3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801080918576_kucukdgsklk.resx">
+      <DependentUpon>201801080918576_kucukdgsklk.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801081004537_kucukdgsklk2.resx">
+      <DependentUpon>201801081004537_kucukdgsklk2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801081007125_kucukdgsklk3geriislem.resx">
+      <DependentUpon>201801081007125_kucukdgsklk3geriislem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801081149063_kucukdgsklk3geriislem3.resx">
+      <DependentUpon>201801081149063_kucukdgsklk3geriislem3.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
